Renamed column batches.date_UCB_UCR to Date_ucr_recvd.

--- a/test/fixtures/batches.yml
+++ b/test/fixtures/batches.yml
@@ -6,7 +6,7 @@ one:
   date_beg_qc: 2013-09-03
   corrections_needed: false
   passed_validation: false
-  date_UCB_UCR: 2013-09-03
+  date_ucr_recvd: 2013-09-03
   date_UCR_LC: 2013-09-03
   LC_approve: false
   valid_reels: 1
@@ -22,7 +22,7 @@ two:
   date_beg_qc: 2013-09-03
   corrections_needed: false
   passed_validation: false
-  date_UCB_UCR: 2013-09-03
+  date_ucr_recvd: 2013-09-03
   date_UCR_LC: 2013-09-03
   LC_approve: false
   valid_reels: 1
